--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,13 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 4.0.0)
 Imports:
-    sf (>= 1.0-1),
-    here (>= 1.0.1),
     httr (>= 1.4.2), 
-    raster (>= 3.1-5),
     jsonlite (>= 1.7.2),
     stringr (>= 1.4.0),
     lubridate
-Suggests: mapedit
+Suggests: 
+    mapedit,
+    sf (>= 1.0-1),
+    here (>= 1.0.1),
+    raster (>= 3.1-5)
 RoxygenNote: 7.2.3
