Create new function planet_order_request_items as a subset of planet_order function, where you conduct a planet_search, pick the items to request, and feed the item ids to planet_order_request_items.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(planet_download)
 export(planet_order)
 export(planet_order_download)
 export(planet_order_request)
+export(planet_order_request_items)
 export(planet_search)
